<resources>
    <string name="app_name">50 Thousand Bees</string>
    <string name="sandbox_button">sandbox</string>
    <string name="exit_button">exit</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="reg">У вас еще нет аккаунта? Зарегистрируйтесь сейчас!</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="repeat_the_password">Введите пароль еще раз</string>
</resources>