<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sandbox_bee_slots_image_repeat">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/blackAlpha">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registration"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <EditText
                style="@style/editTexts"
                android:id="@+id/userLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/login"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />


            <EditText
                style="@style/editTexts"
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                style="@style/editTexts"
                android:id="@+id/userPassword2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:hint="@string/repeat_the_password"
                android:inputType="numberPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:background="@drawable/round_form"
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:layout_marginTop="30dp"
                android:text="@string/registration"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>